refactor: update entity models, DTOs, and services for consistent field naming and response structure; enhance product and shop view filtering; improve image URL handling; add BaseEntity for audit fields